--- a/80-redundancy-analysis.Rmd
+++ b/80-redundancy-analysis.Rmd
@@ -1,8 +1,25 @@
 # 冗長性分析 (RDA) {#redundancy-analysis}
 
-冗長性分析は群集生態学の解析に用いる手法の 1 つです。
-種の行列データが応答変数となり、温度や風速、降水量などの環境要因が説明変数となります。
+冗長性分析は多変量解析 (multivariate analysis) の一種です。
+多変量解析の目的は多変量・多次元の応答変数 (response variable, observation) の特徴を要約または予測することです。
+重回帰分析、主成分分析、クラスター分析、多次元尺度更生法は代表的な方法です。
+
+多変量解析の中に、座標づけ・順序づけ (ordination) を用いる解析方法があります。
+これは、多次元の説明変数と多次元の応答変数 (explanatory variable, predictor) の多変量解析です。
+もっと簡易に説明すると、多変量解析は unconstrained と constrained に分けられます。
+
+では、冗長性分析は群集生態学の解析に用いる手法の 1 つです。
+実際には主成分分析を説明変数で constrained したものが冗長性分析です。
+例えば、種の行列データが応答変数となり、温度や風速、降水量などの環境要因の行列データが説明変数となります。
 つまり、生物群集と環境変数の関係を調べられます。
+
+冗長性分析をするなら、解析するまえに次の作業が必要です。
+
+1. 応答変数の単位が異なる場合、データのスケールが同じになるようにしてください。説明変数の z 値を求めることが一般的ですが、カウントのデータはそのまま使いましょう。
+2. 説明変数の数はサンプル・観測値・サイトの数より少ないようにすること。
+3. 説明変数の単位が異なる場合、応答変数と同じように z 値を求めてください。
+4. 各説明変数と各応答変数のペアの関係が直線であることを確認してください。直線はない場合は、変数の変換を検討してください。
+5. ユークリッド距離以外の距離を使用するなら、生態学に適切な変換を使ってください。へリンガ変換 (Hellinger transform) は種数に適しています。へリンガ変換はゼロや少数の重み付けは低いです。
 
 ## 必要なパッケージ
 
@@ -444,7 +461,17 @@ anova(r3, by = "terms", permutations = 999) # 変数ごとに P 値を確認.
 r4 = rda(Y ~ dist_from_river + dist_from_suisan + mean_f, data = X)
 ```
 
+モデルの結果を確認します。
+Constrained inertia が Unconstrained inertia より高いとき、
+応答変数の散らばりは説明変数で説明できていると考えられる。
+今回の解析結果を確認すると、Constrained intertia は Unconstrained inertia より
+とても小さいので、応答変数の散らばりは説明変数で十分説明できていません。
 
+```{r}
+r4
+```
+
+Constrained inertia はとても低かったが、勉強のために解析を進めます。
 変数ごとに P 値を確認します。
 ```{r}
 anova(r4, by = "terms",  permutations = 999)
