--- a/index.Rmd
+++ b/index.Rmd
@@ -4,7 +4,7 @@ author: "水圏植物生態学研究室 (greg nishihara)"
 date: "`r Sys.Date()`"
 site: bookdown::bookdown_site
 documentclass: book
-bibliography: [book.bib, packages.bib, windfetch.bib ]
+bibliography: [book.bib, packages.bib, windfetch.bib, multivariate.bib ]
 # url: your book url like https://bookdown.org/yihui/bookdown
 # cover-image: path to the social sharing image like images/cover.jpg
 description: |
